# Hello-World

./: ODrive_setup.sh  README.md
robot_ws/.catkin_tools/profiles/default/: devel_collisions.txt
robot_ws/src/nsra_computer_vision/: CMakeLists.txt  package.xml
robot_ws/src/nsra_computer_vision/config/: camera1.xml  camera1_conf.xml  camera2.xml  camera2_conf.xml
robot_ws/src/nsra_computer_vision/include/: nsra_bottle_detection.h
robot_ws/src/nsra_computer_vision/launch/: launch.txt
robot_ws/src/nsra_computer_vision/src/: nsra_bottle_detection.cpp  nsra_gripper  plot_3d_points
robot_ws/src/nsra_computer_vision/src/blob_detection/: blob_detection_left
robot_ws/src/nsra_computer_vision/src/bottle_detection_v1/: front_view_tracking  object_detection.py  top_view_tracking
robot_ws/src/nsra_computer_vision/src/calibration/: calib_intrinsics  calib_stereo.cpp  undistort_rectify.cpp
robot_ws/src/nsra_computer_vision/src/corner_detection/: cbc_detection_right
robot_ws/src/nsra_computer_vision/src/deprecated/: single_cam_callibration.cpp  stereo_callibration
robot_ws/src/nsra_controller/nsra_control/src/: nsra_hw_interface.cpp
robot_ws/src/nsra_odrive_interface/: CMakeLists.txt
robot_ws/src/nsra_odrive_interface/src/: driver_node
robot_ws/src/nsra_odrive_interface/srv/: lr_coords.srv
robot_ws/src/nsra_python_interface/: CMakeLists.txt  package.xml
robot_ws/src/nsra_python_interface/src/: python_interface_test
